<resources>
    <string name="app_name">ClassWork</string>
    <string name="image_name">Image name</string>
    <string name="title_activity_main2">Leanback Title</string>
    <string name="browse_title">Videos by Your Company</string>
    <string name="related_movies">Related Videos</string>
    <string name="grid_view">Grid View</string>
    <string name="error_fragment">Error Fragment</string>
    <string name="personal_settings">Personal Settings</string>
    <string name="watch_trailer_1">Watch trailer</string>
    <string name="watch_trailer_2">FREE</string>
    <string name="rent_1">Rent By Day</string>
    <string name="rent_2">From $1.99</string>
    <string name="buy_1">Buy and Own</string>
    <string name="buy_2">AT $9.99</string>
    <string name="movie">Movie</string>

    <!-- Error messages -->
    <string name="error_fragment_message">An error occurred</string>
    <string name="dismiss_error">Dismiss</string>
    <string name="_650_555_1367">(650) 555-1367</string>
    <string name="mobile">Mobile</string>
    <string name="lionel">lionelmessi@gmail.com</string>
    <string name="personal">Personal</string>
    <string name="contacts">Contacts</string>
</resources>